# molecular-dynamics-simulation

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  Dockerfile  README.md  dump.lammpstrj  lint.sh  minimal.in  notes.txt  requirements.txt  restructure_plan.md
data-setup/: README.md  autolabeler.py  (+11 more)
machine-learning/: README.md  example-result.txt  example.py  main.py  process.py  pyproject.toml  starter.py  train.py  util.py
machine-learning/data/: data.yaml
machine-learning/data/test/labels/: 2um-PS-NaCl-Au-Cit-100-Light-Intensity-Trial-1_1_MMStack_Default-ome-1-Frame-150-_jpg.rf.38245062b8bba879e41e6468884bc471.txt  2um-PS-NaCl-Au-Cit-100-Light-Intensity-Trial-1_1_MMStack_Default-ome-1-Frame-160-_jpg.rf.57d3e286b023e8fa90302896203c1a39.txt  2um-PS-NaCl-Au-Cit-100-Light-Intensity-Trial-1_1_MMStack_Default-ome-1-Frame-180-_jpg.rf.e6fb1f0118b5e7ff2263a951dd9a0764.txt  2um-PS-NaCl-Au-Cit-100-Light-Intensity-Trial-1_1_MMStack_Default-ome-1-Frame-220-_jpg.rf.0c6b3f8f8ca772c5d8b2fd2a88f7f89f.txt  2um-PS-NaCl-Au-Cit-100-Light-Intensity-Trial-1_1_MMStack_Default-ome-1-Frame-230-_jpg.rf.c5171a8861739c4c465be030ca508659.txt  2um-PS-NaCl-Au-Cit-100-Light-Intensity-Trial-1_1_MMStack_Default-ome-1-Frame-240-_jpg.rf.cb87a9dee6fab41a7c9b6f705ce3af64.txt  2um-PS-NaCl-Au-Cit-100-Light-Intensity-Trial-1_1_MMStack_Default-ome-1-Frame-250-_jpg.rf.760b10f92f7b779eae29d7fb54d77f81.txt  2um-PS-NaCl-Au-Cit-100-Light-Intensity-Trial-1_1_MMStack_Default-ome-1-Frame-280-_jpg.rf.7dfb49d9213acf158204b942dda9baea.txt  (+2 more)
machine-learning/data/train/: labels.cache
machine-learning/data/valid/: labels.cache
particle-tracking/: README.md  basic_config.yaml  basic_lodestar_config.yaml  config.yaml  lodestar_config.yaml  mlflow_utils.py  model_comparison.py  pyproject.toml  track.py
particle-tracking/tests/: test_dataset.py  test_model_comparison.py
rf-detr/: README.md  config.yaml  dataset.py  evaluate.py  pyproject.toml  train.py
rf-detr/tests/: test_mlflow_utils.py
(+442 files in other folders)
