[project]
name = "particle-tracking"
version = "0.1.0"
description = "Particle tracking pipeline using RF-DETR, YOLOv12, or LodeSTAR"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "tifffile>=2024.1.1",
    "pillow>=10.0.0",
    "tqdm>=4.66.0",
    "supervision>=0.21.0",
    "trackpy>=0.6.0",
    "ultralytics>=8.0.0",
    "deeplay>=0.1.4",
    "deeptrack>=2.0.1",
    "matplotlib>=3.8.0",
    "numba>=0.65.1",
    "setuptools>=81.0.0",
    "scipy>=1.17.1",
    "looseversion>=1.3.0",
]

# Note: rfdetr is intentionally excluded — it is loaded at runtime from
# models/rf_detr/.venv to avoid dependency conflicts with its CUDA build.

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
