[project]
name = "rf-detr"
version = "0.1.0"
description = "RF-DETR particle detection training pipeline"
requires-python = ">=3.11"
dependencies = [
    "rfdetr>=1.1.0",
    "mlflow>=2.12.0",
    "pyyaml>=6.0",
    "supervision>=0.21.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "pytest>=8.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchvision = [{ index = "pytorch-cu121" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
